--- a/COVID_vaccinations.ipynb
+++ b/COVID_vaccinations.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 1,
    "outputs": [],
    "source": [
     "%reload_ext jetisu.query_idr_magic"
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 2,
    "outputs": [
     {
      "data": {
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 3,
    "outputs": [
     {
      "data": {
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 4,
    "outputs": [
     {
      "data": {
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 5,
    "outputs": [
     {
      "data": {
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 6,
    "outputs": [
     {
      "data": {
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 7,
    "outputs": [
     {
      "data": {
@@ -212,7 +212,11 @@
    "cell_type": "markdown",
    "source": [
     "## Test Cases\n",
-    "In addition to these examples, the ```covid_vaccinations``` intensionally defined relation passes an additional 66 tests in ```test_covid_vaccinations.py```"
+    "In addition to these examples, the ```covid_vaccinations``` intensionally defined relation passes an additional 66 tests in ```test_covid_vaccinations.py```\n",
+    "\n",
+    "## Next step\n",
+    "You can edit and re-run this example workbook by following the instructions here:\n",
+    "[How to run the example notebooks](https://github.com/DavidPratten/jetisu/blob/main/docs/run_notebooks.md)"
    ],
    "metadata": {
     "collapsed": false
