--- a/COVID_vaccinations_and_work.ipynb
+++ b/COVID_vaccinations_and_work.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "outputs": [],
    "source": [
     "%reload_ext jetisu.query_idr_magic"
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "outputs": [
     {
      "data": {
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "outputs": [
     {
      "data": {
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "outputs": [
     {
      "data": {
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "outputs": [
     {
      "data": {
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "outputs": [
     {
      "data": {
@@ -180,7 +180,11 @@
    "cell_type": "markdown",
    "source": [
     "## Test Cases\n",
-    "In addition to these examples, the ```covid_vaccinations_and_work``` intensionally defined relation passes an additional 23 tests in ```test_covid_vaccinations_and_work.py```"
+    "In addition to these examples, the ```covid_vaccinations_and_work``` intensionally defined relation passes an additional 23 tests in ```test_covid_vaccinations_and_work.py```.\n",
+    "\n",
+    "## Next step\n",
+    "You can edit and re-run this example workbook by following the instructions here:\n",
+    "[How to run the example notebooks](https://github.com/DavidPratten/jetisu/blob/main/docs/run_notebooks.md)"
    ],
    "metadata": {
     "collapsed": false
