--- a/Goal_seeking_covid_vaccination_and_work.ipynb
+++ b/Goal_seeking_covid_vaccination_and_work.ipynb
@@ -49,7 +49,10 @@
     "}"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "tags": [
+        "skip-execution"
+      ]
    }
   },
   {
@@ -90,7 +93,10 @@
     "}"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "tags": [
+        "skip-execution"
+      ]
    }
   },
   {
