Prevent -nbmake pytest execution with input()

--- a/Goal_seeking_covid_vaccination_and_work.ipynb
+++ b/Goal_seeking_covid_vaccination_and_work.ipynb
@@ -149,7 +149,10 @@
     "}"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "tags": [
+     "skip-execution"
+    ]
    }
   }
  ],
