--- a/COVID_vaccinations.ipynb
+++ b/COVID_vaccinations.ipynb
@@ -6,7 +6,7 @@
     "# Australian COVID Vaccination eligibility and up-to-date (circa mid-2022)\n",
     "This example explores the COVID vaccination eligibility and up-to-date regime in place in the middle of 2022.\n",
     "\n",
-    "The relation (table) containing the rules has the following columns:\n",
+    "The sigma complete relation (table) containing the rules has the following columns:\n",
     "```\n",
     " covid_vaccinations(age,\n",
     "                    recommended_doses,\n",
