--- a/COVID_vaccinations_and_work.ipynb
+++ b/COVID_vaccinations_and_work.ipynb
@@ -6,7 +6,7 @@
     "# Australian COVID Vaccinations and Work (circa mid 2022)\n",
     "This example explores the mandatory COVID vaccination regime in place in the middle of 2022. Three Australian states: New South Wales, Victoria, and Western Australia are covered in this example.\n",
     "\n",
-    "The relation ```covid_vaccinations_and_work``` which contains the relevant rules is defined in [MiniZinc](https://www.minizinc.org/). Here is the definition."
+    "The sigma complete relation ```covid_vaccinations_and_work``` which contains the relevant rules is defined in [MiniZinc](https://www.minizinc.org/). Here is the definition."
    ],
    "metadata": {
     "collapsed": false
