--- a/Goal_seeking_covid_vaccination_and_work.ipynb
+++ b/Goal_seeking_covid_vaccination_and_work.ipynb
@@ -15,7 +15,7 @@
    "cell_type": "markdown",
    "source": [
     "# Interactive Q&A with COVID Rules for Workplaces\n",
-    "Intensionally defined relations support goal directed question and answer with users. This notebook shows how to find the values in any column in the [covid_vaccinations_and_work](COVID_vaccinations_and_work.ipynb) relation through Q&A.\n",
+    "Sigma complete relations support goal directed question and answer with users. This notebook shows how to find the values in any column in the [covid_vaccinations_and_work](COVID_vaccinations_and_work.ipynb) relation through Q&A.\n",
     "\n",
     "Goal seeking is begun by nominating the relation being searched and the list of columns that are sought.  Jetisu chooses the sequence of questions to ask that will give the answer in the fewest questions.\n",
     "\n",
@@ -38,8 +38,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Finding covid_vaccination_work_recommended_doses, covid_vaccination_work_mandatory, please answer the following questions ...\n",
-      "\n"
+      "Finding covid_vaccination_work_recommended_doses, covid_vaccination_work_mandatory, please answer the following questions ...\n"
      ]
     },
     {
@@ -93,8 +92,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Finding work_sector, please answer the following questions ...\n",
-      "\n"
+      "Finding work_sector, please answer the following questions ...\n"
      ]
     },
     {
